# super_planner

./: .gitignore  AGENTS.md  refactor.md  setup.py  worker.py
super_planner/config/: static_dense.yaml
super_rosless/: .gitignore  CMakeLists.txt  README.md
super_rosless/include/pcl/: point_cloud.h  point_types.h
super_rosless/include/pcl/io/: pcd_io.h
super_rosless/include/rog_map_ros/: rog_map_ros1.hpp  rog_map_ros2.hpp
super_rosless/include/ros_interface/ros2/: ros2_interface.hpp
super_rosless/include/super_core_py/: compat.hpp  no_ros_interface.hpp  planner_session.hpp
super_rosless/include/super_utils/: backward.hpp  color_msg_utils.hpp  yaml_loader.hpp
super_rosless/include/utils/header/: backward.hpp  color_msg_utils.hpp  yaml_loader.hpp
super_rosless/src/: bindings.cpp  planner_session.cpp
super_rosless/tests/: compare_with_ros_reference.py  ros_reference_plan.cpp  smoke_plan.py
